--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   docsify:
 
-    image: afreisinger/docksify:latest
+    image: afreisinger/docsify:latest
     container_name: handbook
     restart: always
     network_mode: host
